--- a/00.CSS.md
+++ b/00.CSS.md
@@ -1,4 +1,4 @@
-- ## 참조
+- ## 학습 사이트
 	- w3school
 		- tutorial
 			- https://www.w3schools.com/css/default.asp
@@ -26,7 +26,7 @@
 		- 문서의 매력과 가독성을 높입니다.
 		- html 에 스타일을 직접 표현하면 문서의 데이터적인 의미를 찾기 힘들어 집니다.
 		- 문서의 스타일은 CSS 로 분리시켜서 문서의 의미를 해치지 않게 합니다.
-		- 키워드 : 시맨틱 마크업
+		- 키워드 : **시맨틱 마크업**
 - ## Cascading Style Sheet
 	- ![[Pasted image 20221027135138.png]]
 	- 먼저 지정한 스타일보다 나중에 지정한 스타일이 우선합니다.
@@ -42,14 +42,36 @@
 	- css media type
 		- screen
 		- print
+			- ![[print.html]]
 		- speach
 		- [[CSS media queries 문법]]
 - ## CSS에서 컬러를 표현하는 방법
 	- keywords
 		- https://www.w3schools.com/cssref/css_colors.php
-	- hex decimal, hex decimal + transparency
+		- intelliJ에서 `color:` 치면 서제스트 해 줍니다.
+	- hexadecimal, hexadecimal + transparency
+		- rgb 포멧 : `#RRGGBB`
+		- rgba 포멧 : `#RRGGBBAA`
+		- 16진수(0-255)이기 때문에 사람이 계산해서 사용하기는 불편함
+		- 포토샵에서 사용하는 포맷
 	- rgb, rgba
+		- rgb(255, 255, 255)
+			- rgb(255 255 255)
+		- rgba(255, 255, 255, 0.5) | rgba(255, 255, 255, 50%)
+			- rgba(255 255 255 / 0.5) | rgba(255 255 255 / 50%)
 	- hsl, hsla
+		- rgb와 형식 동일함
+		- https://web.dev/learn/css/color/#hsl-hue,-saturation,-lightness
+	- 읽어 보고 갈께요
+		- https://www.w3schools.com/cssref/css_colors_legal.php
+		- https://web.dev/learn/css/color/#hex-colors
+	- 개발자가 컬러를 선택하는 방법
+		- 구글에서 `color palette` 검색하기
+		- ex : https://colorhunt.co/palette/b3ffaef8ffdbff6464ff7d7d
+	- 웹툴
+		- https://pixlr.com/
+		- https://www.figma.com/
+			- https://www.figma.com/file/oIN28PNWDoluMIjvdy3TO0/Figma-Basics?node-id=0%3A495
 - ## CSS에서 사이즈를 표현하는 방법(자주 사용하는)
 	- px
 		- absolute
@@ -77,6 +99,11 @@
 	- 문서 한번 볼까요
 		- https://www.w3schools.com/cssref/css_units.php
 		- https://developer.mozilla.org/ko/docs/Learn/CSS/Building_blocks/Values_and_units
+- ## 상속
+- ## 셀렉터
+- ## 명시도
+	- 한글 : https://developer.mozilla.org/ko/docs/Web/CSS/Specificity
+	- 테이블로 정리 : https://www.w3schools.com/css/css_specificity.asp
 - ## 자주 사용하는 속성들
 	- 글자관련 속성들
 		- color
@@ -144,11 +171,6 @@
 	- visibility
 		- none
 		- visible
-- ## 상속
-- ## 셀렉터
-- ## 명시도
-	- 한글 : https://developer.mozilla.org/ko/docs/Web/CSS/Specificity
-	- 테이블로 정리 : https://www.w3schools.com/css/css_specificity.asp
 - ## 리스트 스타일
 - ## 박스모델
 - ## 심화 셀렉터
