--- a/00.CSS.md
+++ b/00.CSS.md
@@ -18,7 +18,7 @@
 	- codepen
 		- html/css/javascript 를 간단하게 테스트 & 공유하기
 		- https://codepen.io/
-	- 이것 하나로 갑시다.
+	- 여기부터 시작하세요.
 		- https://web.dev/learn/css/
 - ## CSS 가 뭔가요?
 	- CSS 는 사용자에게 문서를 표시하는 방법을 지정하는 언어입니다.
@@ -72,9 +72,11 @@
 		- https://pixlr.com/
 		- https://www.figma.com/
 			- https://www.figma.com/file/oIN28PNWDoluMIjvdy3TO0/Figma-Basics?node-id=0%3A495
+			- https://www.youtube.com/watch?v=N_OYciAa3sU
 - ## CSS에서 사이즈를 표현하는 방법(자주 사용하는)
 	- px
 		- absolute
+		- 1px = 1/96th of 1in
 	- %
 		- relative
 		- width, height는 일반적
@@ -92,18 +94,22 @@
 		- root element의 font-size를 기준으로 함(보통 16px)
 	- vh
 		- relative
+		- 1% of viewport's height. 
 		- 0~100
 	- vw
 		- relative
+		- 1% of viewport's width.
 		- 0~100
+	- 단위없는 숫자
+		- 0-255
+		- 1.5
+	- deg, turn...
+		- 각도, angle units
+		- https://web.dev/learn/css/sizing/#angle-units
 	- 문서 한번 볼까요
 		- https://www.w3schools.com/cssref/css_units.php
 		- https://developer.mozilla.org/ko/docs/Learn/CSS/Building_blocks/Values_and_units
-- ## 상속
-- ## 셀렉터
-- ## 명시도
-	- 한글 : https://developer.mozilla.org/ko/docs/Web/CSS/Specificity
-	- 테이블로 정리 : https://www.w3schools.com/css/css_specificity.asp
+		- https://web.dev/learn/css/sizing/
 - ## 자주 사용하는 속성들
 	- 글자관련 속성들
 		- color
@@ -119,6 +125,9 @@
 				- https://developer.mozilla.org/ko/docs/Web/CSS/font-family#%EA%B5%AC%EB%AC%B8
 		- letter-spacing
 		- word-spacing
+		- white-spacing
+			- 공백 문자를 처리하는 방식
+			- https://developer.mozilla.org/ko/docs/Web/CSS/white-space
 		- line-height
 		- text-align
 			- https://developer.mozilla.org/ko/docs/Web/CSS/text-align#%EA%B5%AC%EB%AC%B8
@@ -171,6 +180,37 @@
 	- visibility
 		- none
 		- visible
+- ## CSS Default 속성값들과 Reset
+	- https://www.w3schools.com/CSSref/css_default_values.php
+	- reset css
+		- https://velog.io/@teo/2022-CSS-Reset-%EB%8B%A4%EC%8B%9C-%EC%8D%A8%EB%B3%B4%EA%B8%B0
+- ## 상속
+	- Parent의 속성이 Child에게 전달되는 특징
+	- 상속되는 속성과 상속되지 않는 속성이 있음.
+		- 직관적
+		- 자주 사용하는 속성 중 상속되는 속성
+			- color
+			- font
+			- line-height
+			- letter-spacing
+			- text-align
+			- word-spacing
+			- visibility
+			- https://web.dev/learn/css/inheritance/#which-properties-are-inheritable
+			- https://www.w3.org/TR/CSS21/propidx.html
+	- 상속 제어하기
+		- inherit
+			- Parent 속성 값을 상속하겠음
+		- initial
+			- Default 속성 값을 사용하겠음
+		- unset
+			- 부모 속성이 있으면 부모 속성, 없으면 브라우저 디폴트를 사용하겠다.
+	- 크롬 개발자툴 이용해서 확인 수정 가능
+		- ![[Pasted image 20221028114928.png]]
+- ## 셀렉터
+- ## 명시도
+	- 한글 : https://developer.mozilla.org/ko/docs/Web/CSS/Specificity
+	- 테이블로 정리 : https://www.w3schools.com/css/css_specificity.asp
 - ## 리스트 스타일
 - ## 박스모델
 - ## 심화 셀렉터
