--- a/00.CSS.md
+++ b/00.CSS.md
@@ -208,6 +208,40 @@
 	- 크롬 개발자툴 이용해서 확인 수정 가능
 		- ![[Pasted image 20221028114928.png]]
 - ## 셀렉터
+	- 기본 셀렉터
+		- class name
+		- id name
+		- tag name
+		- 전체 셀렉터
+			- `*`
+			- Universal selector 
+		- 그룹 셀렉터
+			- 콤마로 구분해서 여러 셀렉터에 동일 css 속성을 부여할 수 있음
+	- 속성 셀렉터
+		- `[data-type='primary']`
+		- `[data-type]`
+		- `[href*='example.com']`
+		- `[href^='https']`
+		- `[href$='.com']`
+	- 참조
+		- https://web.dev/learn/css/selectors/
+		- https://developer.mozilla.org/ko/docs/Web/CSS/Attribute_selectors
+		- https://www.w3schools.com/CSSref/css_selectors.php
+- ## 수도 Pseudo Class
+	- 특별한 상태에 대한 CSS 처리를 가능하게 합니다.
+	- 자주 사용하는 수도 클래스 속성
+		- :link
+		- :visited
+		- :hover
+		- :focus
+		- :checked
+		- :first-child
+		- :last-child
+		- :nth-child()
+	- 참조
+		- https://www.w3schools.com/css/css_pseudo_classes.asp
+		- https://web.dev/learn/css/pseudo-classes/
+		- https://developer.mozilla.org/ko/docs/Web/CSS/Pseudo-classes
 - ## 명시도
 	- 한글 : https://developer.mozilla.org/ko/docs/Web/CSS/Specificity
 	- 테이블로 정리 : https://www.w3schools.com/css/css_specificity.asp
