--- a/00.CSS.md
+++ b/00.CSS.md
@@ -11,14 +11,15 @@
 			- https://developer.mozilla.org/ko/docs/Web/CSS
 		- 레퍼런스
 			- https://developer.mozilla.org/ko/docs/Web/CSS/Reference
-	- w3c : 가이드를 만드는 곳
+	- w3c 
+		- 스펙을 만드는 커뮤니티
 		- https://www.w3.org/
 		- Validation 체크 툴
 			- https://validator.w3.org/
 	- codepen
 		- html/css/javascript 를 간단하게 테스트 & 공유하기
 		- https://codepen.io/
-	- 여기부터 시작하세요.
+	- 구글과 함께 시작하세요.
 		- https://web.dev/learn/css/
 - ## CSS 가 뭔가요?
 	- CSS 는 사용자에게 문서를 표시하는 방법을 지정하는 언어입니다.
@@ -227,7 +228,7 @@
 		- https://web.dev/learn/css/selectors/
 		- https://developer.mozilla.org/ko/docs/Web/CSS/Attribute_selectors
 		- https://www.w3schools.com/CSSref/css_selectors.php
-- ## 수도 Pseudo Class
+- ## Pseudo Class :
 	- 특별한 상태에 대한 CSS 처리를 가능하게 합니다.
 	- 자주 사용하는 수도 클래스 속성
 		- :link
@@ -241,16 +242,23 @@
 	- 참조
 		- https://www.w3schools.com/css/css_pseudo_classes.asp
 		- https://web.dev/learn/css/pseudo-classes/
+		- 
 		- https://developer.mozilla.org/ko/docs/Web/CSS/Pseudo-classes
+- ## Pseudo Element ::
+	- 특정 부분에만 속성을 지정합니다.
+	- 보면 좋을 속성
+		- ::first-line
+		- ::first-letter
+		- ::after
+		- ::before
+		- ::selection
+	- 참조
+		- https://www.w3schools.com/css/css_pseudo_elements.asp
 - ## 명시도
 	- 한글 : https://developer.mozilla.org/ko/docs/Web/CSS/Specificity
 	- 테이블로 정리 : https://www.w3schools.com/css/css_specificity.asp
 - ## 리스트 스타일
 - ## 박스모델
-- ## 심화 셀렉터
-	- Pseudo-elements
-	- Pseudo-classes
-	- Shadow
 - ## 레이아웃
 - ## FLEX
 - ## GRID
