--- a/00.CSS.md
+++ b/00.CSS.md
@@ -255,10 +255,16 @@
 	- 참조
 		- https://www.w3schools.com/css/css_pseudo_elements.asp
 - ## 명시도
-	- 한글 : https://developer.mozilla.org/ko/docs/Web/CSS/Specificity
-	- 테이블로 정리 : https://www.w3schools.com/css/css_specificity.asp
+	- 명시도가 높을 수록 우선 순위가 높게 적용됩니다.
+	- 명시도 점시 테이블을 보면 명확하지만
+	- `inline(1000) > id(100) > class(10) > tag(1) > *` 로 우선 순위가 있다라고 생각하면 됩니다.
+	- 명시도 테이블 
+		- ![[Pasted image 20221028124304.png]]
+		- https://www.w3schools.com/css/css_specificity.asp
+	- 깊이 있게 알고 싶다면
+		- https://developer.mozilla.org/ko/docs/Web/CSS/Specificity
 - ## 리스트 스타일
-- ## 박스모델
+	- ## 박스모델
 - ## 레이아웃
 - ## FLEX
 - ## GRID
