--- a/00.CSS.md
+++ b/00.CSS.md
@@ -1,3 +1,16 @@
+- ## 수업 전에
+	- Obsidian
+		- markdown
+		- 아이디어의 발전
+		- 생각의 연결관계
+			- tag
+			- link
+			- graph view
+		- 다양한 플러그인
+			- mindmap
+			- excalidraw
+			- anki
+		- ### Outliner 방식
 - ## 학습 사이트
 	- w3school
 		- tutorial
@@ -264,7 +277,7 @@
 	- 깊이 있게 알고 싶다면
 		- https://developer.mozilla.org/ko/docs/Web/CSS/Specificity
 - ## 리스트 스타일
-	- ## 박스모델
+- ## 박스모델
 - ## 레이아웃
 - ## FLEX
 - ## GRID
