--- a/00.CSS.md
+++ b/00.CSS.md
@@ -1,4 +1,4 @@
-- ## 수업 전에
+- 수업 전에
 	- Obsidian
 		- markdown
 		- 아이디어의 발전
@@ -10,8 +10,8 @@
 			- mindmap
 			- excalidraw
 			- anki
-		- ### Outliner 방식
-- ## 학습 사이트
+		- Outliner 방식
+- 학습 사이트
 	- w3school
 		- tutorial
 			- https://www.w3schools.com/css/default.asp
@@ -34,32 +34,32 @@
 		- https://codepen.io/
 	- 구글과 함께 시작하세요.
 		- https://web.dev/learn/css/
-- ## CSS 가 뭔가요?
+- CSS 가 뭔가요?
 	- CSS 는 사용자에게 문서를 표시하는 방법을 지정하는 언어입니다.
 	- 왜 필요한가요?
 		- 문서의 매력과 가독성을 높입니다.
 		- html 에 스타일을 직접 표현하면 문서의 데이터적인 의미를 찾기 힘들어 집니다.
 		- 문서의 스타일은 CSS 로 분리시켜서 문서의 의미를 해치지 않게 합니다.
 		- 키워드 : **시맨틱 마크업**
-- ## Cascading Style Sheet
+- Cascading Style Sheet
 	- ![[Pasted image 20221027135138.png]]
 	- 먼저 지정한 스타일보다 나중에 지정한 스타일이 우선합니다.
 	- html 태그상 자식 태그의 스타일이 상속되는 부모 태그의 스타일을 우선합니다.
 	- web.dev : https://web.dev/learn/css/the-cascade/
 	- [[Cascading Codepen 예제]]
-- ## [[기본 문법]]
-- ## [[html 에 CSS 적용하는 방법]]
+- [[기본 문법]]
+- [[html 에 CSS 적용하는 방법]]
 	- inline style
 	- style 태그안에
 	- css 외부 파일
-- ## 프린트용 CSS 적용하는 방법
+- 프린트용 CSS 적용하는 방법
 	- css media type
 		- screen
 		- print
 			- ![[print.html]]
 		- speach
 		- [[CSS media queries 문법]]
-- ## CSS에서 컬러를 표현하는 방법
+- CSS에서 컬러를 표현하는 방법
 	- keywords
 		- https://www.w3schools.com/cssref/css_colors.php
 		- intelliJ에서 `color:` 치면 서제스트 해 줍니다.
@@ -87,7 +87,7 @@
 		- https://www.figma.com/
 			- https://www.figma.com/file/oIN28PNWDoluMIjvdy3TO0/Figma-Basics?node-id=0%3A495
 			- https://www.youtube.com/watch?v=N_OYciAa3sU
-- ## CSS에서 사이즈를 표현하는 방법(자주 사용하는)
+- CSS에서 사이즈를 표현하는 방법(자주 사용하는)
 	- px
 		- absolute
 		- 1px = 1/96th of 1in
@@ -124,7 +124,7 @@
 		- https://www.w3schools.com/cssref/css_units.php
 		- https://developer.mozilla.org/ko/docs/Learn/CSS/Building_blocks/Values_and_units
 		- https://web.dev/learn/css/sizing/
-- ## 자주 사용하는 속성들
+- 자주 사용하는 속성들
 	- 글자관련 속성들
 		- color
 			- https://developer.mozilla.org/ko/docs/Web/CSS/color#%EA%B5%AC%EB%AC%B8
@@ -194,11 +194,11 @@
 	- visibility
 		- none
 		- visible
-- ## CSS Default 속성값들과 Reset
+- CSS Default 속성값들과 Reset
 	- https://www.w3schools.com/CSSref/css_default_values.php
 	- reset css
 		- https://velog.io/@teo/2022-CSS-Reset-%EB%8B%A4%EC%8B%9C-%EC%8D%A8%EB%B3%B4%EA%B8%B0
-- ## 상속
+- 상속
 	- Parent의 속성이 Child에게 전달되는 특징
 	- 상속되는 속성과 상속되지 않는 속성이 있음.
 		- 직관적
@@ -221,7 +221,7 @@
 			- 부모 속성이 있으면 부모 속성, 없으면 브라우저 디폴트를 사용하겠다.
 	- 크롬 개발자툴 이용해서 확인 수정 가능
 		- ![[Pasted image 20221028114928.png]]
-- ## 셀렉터
+- 셀렉터
 	- 기본 셀렉터
 		- class name
 		- id name
@@ -241,7 +241,7 @@
 		- https://web.dev/learn/css/selectors/
 		- https://developer.mozilla.org/ko/docs/Web/CSS/Attribute_selectors
 		- https://www.w3schools.com/CSSref/css_selectors.php
-- ## Pseudo Class :
+- Pseudo Class :
 	- 특별한 상태에 대한 CSS 처리를 가능하게 합니다.
 	- 자주 사용하는 수도 클래스 속성
 		- :link
@@ -257,7 +257,7 @@
 		- https://web.dev/learn/css/pseudo-classes/
 		- 
 		- https://developer.mozilla.org/ko/docs/Web/CSS/Pseudo-classes
-- ## Pseudo Element ::
+- Pseudo Element ::
 	- 특정 부분에만 속성을 지정합니다.
 	- 보면 좋을 속성
 		- ::first-line
@@ -267,7 +267,7 @@
 		- ::selection
 	- 참조
 		- https://www.w3schools.com/css/css_pseudo_elements.asp
-- ## 명시도
+- 명시도
 	- 명시도가 높을 수록 우선 순위가 높게 적용됩니다.
 	- 명시도 점시 테이블을 보면 명확하지만
 	- `inline(1000) > id(100) > class(10) > tag(1) > *` 로 우선 순위가 있다라고 생각하면 됩니다.
@@ -276,13 +276,13 @@
 		- https://www.w3schools.com/css/css_specificity.asp
 	- 깊이 있게 알고 싶다면
 		- https://developer.mozilla.org/ko/docs/Web/CSS/Specificity
-- ## 리스트 스타일
-- ## 박스모델
-- ## 레이아웃
-- ## FLEX
-- ## GRID
-- ## Transition
-- ## Gradient
-- ## Animation
-- ## Filter
-- ## Function
+- 리스트 스타일
+- 박스모델
+- 레이아웃
+- FLEX
+- GRID
+- Transition
+- Gradient
+- Animation
+- Filter
+- Function
