end of 28 class

--- a/00. CSS with heading with mindmap.md
+++ b/00. CSS with heading with mindmap.md
@@ -5,19 +5,19 @@ mindmap-plugin: basic
 # CSS
 
 ## 수업 전에
--
-   - Obsidian
-      - markdown
-      - 아이디어의 발전
-      - 생각의 연결관계
-         - tag
-         - link
-         - graph view
-      - 다양한 플러그인
-         - mindmap
-         - excalidraw
-         - anki
+- Obsidian
+   - markdown
+   - 아이디어의 발전
+   - 생각의 연결관계
+      - tag
+      - link
+      - graph view
+   - 다양한 플러그인
+      - mindmap
+      - excalidraw
             -
+
+## anki
 - Outliner 방식
 
 ## 학습 사이트
@@ -275,9 +275,10 @@ mindmap-plugin: basic
    - :nth-child()
 - 참조
    - https://www.w3schools.com/css/css_pseudo_classes.asp
-   - https://web.dev/learn/css/pseudo-classes/
       -
-   - https://developer.mozilla.org/ko/docs/Web/CSS/Pseudo-classes
+
+## https://web.dev/learn/css/pseudo-classes/
+- https://developer.mozilla.org/ko/docs/Web/CSS/Pseudo-classes
 
 ## Pseudo Element ::
 - 특정 부분에만 속성을 지정합니다.
