--- a/00. CSS with heading.md
+++ b/00. CSS with heading.md
@@ -98,6 +98,7 @@
     - font-size는 상속 받는 것을 기준으로 함
 - em
     - relative
+	- 반응형웹
     - parent의 font-size를 기준으로 함
     - px-em converter
         - https://www.w3schools.com/cssref/css_pxtoemconversion.php
@@ -137,6 +138,7 @@
             - https://developer.mozilla.org/ko/docs/Web/CSS/font-weight#%EA%B5%AC%EB%AC%B8
         - font-family
             - https://developer.mozilla.org/ko/docs/Web/CSS/font-family#%EA%B5%AC%EB%AC%B8
+        - [[daum, naver sampe]]
     - letter-spacing
     - word-spacing
     - white-spacing
